# packing

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
installer/: packing_installer.iss
packaging/: packing_gui.spec
scripts/: build_exe.ps1  build_installer.ps1
src/packing_mvp/: __init__.py  catalog.py  cli.py  excel_report.py  export.py  gmsh_runtime.py  gui.py  packer.py  presentation.py  project_io.py  runner.py  step_export.py  step_extract.py  step_merge.py  update_config.py  updater.py  utils.py  visualization.py  viz.py
src/packing_mvp/strategies/: __init__.py  base.py  flat_assembly_footprint.py  single_root_shape.py  solids.py
tests/: test_cli_smoke.py  test_excel_report.py  test_gui_client_copy.py  test_gui_drag_drop.py  test_gui_layout.py  test_gui_result_banner.py  test_gui_step_loading.py  test_gui_updates.py  test_packer_basic.py  test_presentation.py  test_project_io.py  test_runner_smoke.py  test_step_export.py  test_step_extract.py  test_strategies.py  test_updater.py  test_validation.py  test_viz_gif.py
